--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,12 @@
+
+/* components */
+
+
+
+
+
+
+
 .main {
   display: flex;
   flex-direction: column;
@@ -5,6 +14,7 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+  
 }
 
 .description {
