--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,76 +1,92 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+.utility{
+  font-family: 'Clash Display', sans-serif;       
+  color: #494957;
+  background-color: #1d1d2f; 
+  background-color: #f5f5f5;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+/* main pages */
+.full{
+  height: 100vh;
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+
+/* card */
+.img-card{
+  height: 350px;
+}
+
+.card-blue{
+  height: 470px;
+  width: 400px;
+  overflow: hidden;
+}
+
+
+
+
+/* font */
+.fs{
+  font-size: 18px;
+}
+.fs-2{
+  font-size: 54px;
+}
+.text-grey{
+  color: grey;
+}
+/* navbar */
+.fadhil {
+  font-size: 35px;
+  font-weight: 500;
+  color: #1d1d2f;
+  padding: 10px;
+  /* transition: border-color .3s, background-color .3s, transform .3s, color .3s; */
+  transition-timing-function: ease-in-out;
+  transition-duration: 0.2s;
+  transition-property: all;
+}
+.fadhil:hover{
+font-weight: 800;
+padding: 0;
+overflow: hidden;
+}
+.navbar-brand{
+  font-size: 35px;
+  font-weight: 800;
+  color: #1d1d2f;
+}
+.navbar-brand:hover{
+}
+.border-top-blue{
+  border-top: #1d1d2f 2px solid;
+}
+.border-bottom-blue{
+  border-bottom: #1d1d2f 2px solid;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .albert{
+font-family: 'Albert Sans', sans-serif;
 }
 
 * {
@@ -78,21 +94,185 @@
   padding: 0;
   margin: 0;
 }
-
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: 'Albert Sans', sans-serif;
+  color: #1d1d2f;
+}
+footer{
+  min-height: 15vh;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: #f5f5f5;
+  background-color: #1d1d2f;
+  padding: 10px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+/* header */
+.header-wrapper {
+  background-color: #fff;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.item{
+  font-size: 20px;
+  padding: 5px;
+}
+
+/* components */
+
+.btn-outline-blue{
+  color: #1d1d2f;
+  text-align: center;
+    background-color: #fff;
+    border: 2px solid #1d1d2f;
+    border-radius: 81px;
+    justify-content: center;
+    padding: 26px 38px;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.111em;
+    text-decoration: none;
+    transition: border-color .3s, background-color .3s, transform .3s, color .3s;
+    transform: translate(0);
+}
+.btn-outline-blue:hover{
+  color: #fff;
+    background-color: #1d1d2f;
+    border: 2px solid #1d1d2f;
+}
+.btn-blue{
+  color: #fff;
+  text-align: center;
+    background-color: #1d1d2f;
+    border: 2px solid #1d1d2f;
+    border-radius: 81px;
+    justify-content: center;
+    padding: 26px 38px;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.111em;
+    text-decoration: none;
+    transition: border-color .3s, background-color .3s, transform .3s, color .3s;
+}
+.btn-blue:hover{
+  color: #fff;
+  text-align: center;
+    background-color: #3939cc;
+    border: 2px solid #3939cc;
+    border-radius: 81px;
+    justify-content: center;
+    padding: 26px 38px;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.111em;
+    text-decoration: none;
+    transform: translateY(-1px);
+}
+
+.btn-blue-sm{
+  border-width: 1px;
+  padding: 18px 24px;
+  font-size: 16px;
+  line-height: 1.125em;
+}
+.btn-blue-sm:hover{
+  transition: border-color .3s, background-color .3s, transform .3s, color .3s;
+  transform: translate(0);
+  border-width: 1px;
+  padding: 18px 24px;
+  font-size: 16px;
+  line-height: 1.125em;
+}
+
+
+
+
+.border-blue{
+  border: #1d1d2f 3px solid;
+  border-radius: 10px;
+}
+
+.text-blue{
+  color: #1d1d2f;
+}
+.bg-blue{
+  background-color: #1d1d2f;
+}
+
+.cta{
+  width: 85%;
+  /* min-height: 65vh; */
+  overflow: hidden;
+}
+.div-img-cta{
+  max-width: 500px;
+}
+
+.img-cta{
+  /* width: 350px; */
+  /* height: ;wi */
+  width: 100%;
+  max-height: 65vh;
+}
+
+
+
+
+/* utility */
+
+
+.center{
+  justify-items: center;
+  align-items: center;
+  justify-content: center;  
+  text-align: center;
+}
+.boldest{
+  font-weight: 900;
+}
+
+.warning{
+  color: rgb(255, 218, 10);
+}
+.light {
+  color: #f8f9fa;
+}
+.primary{
+  color: #494957;
+}
+
+.dark{
+ color: #212529; 
+}
+nav{
+}
+.clash{
+  font-family: 'Clash Display', sans-serif;                                            
+}
+p{
+  font-weight: lighter;
+}
+li a{
+  font-weight: lighter;
+}
+
+Link:hover, a:hover{
+  color: rgb(255, 218, 10);
+}
+.copy{
+  font-size: smaller;
+}
+.ig:hover{
+  color: rgb(224, 49, 18);
+}
+h6{
+  color: #ffc107;
 }
 
 a {
